# Slam

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  tree.dot
cmake/: PostInstall.cmake
examples/: CMakeLists.txt
examples/GloballyChain/: Gchain.csv  Gchain.xml  run_example.sh  tree.dot
src/: main.cc
src/antlr4/dtLimitsParser/grammar/: genParser.sh  limits.g4  limits.interp  limits.tokens  limitsLexer.interp
src/antlr4/dtLimitsParser/grammar/include/: limitsBaseListener.h  limitsLexer.h  limitsListener.h  limitsParser.h
src/antlr4/dtLimitsParser/grammar/src/: limitsBaseListener.cpp  limitsLexer.cpp  limitsListener.cpp  limitsParser.cpp
src/antlr4/dtLimitsParser/handler/include/: DTLimitsParserHandler.hh  dtLimitsParsingUtils.hh
src/antlr4/dtLimitsParser/handler/src/: DTLimitsParserHandler.cc  dtLimitsParsingUtils.cc
src/antlr4/metricParser/grammar/.antlr/: metricBaseListener.java  metricLexer.java  metricListener.java  metricParser.java
src/antlr4/metricParser/handler/include/: MetricParserHandler.hh  metricParsingUtils.hh
src/antlr4/metricParser/handler/src/: MetricParserHandler.cc  metricParsingUtils.cc
src/antlr4/propositionParser/grammar/: genParser.sh  proposition.g4  proposition.interp  proposition.tokens  propositionLexer.interp
src/antlr4/propositionParser/grammar/.antlr/: proposition.interp  propositionLexer.interp  (+2 more)
src/antlr4/templateParser/: CMakeLists.txt  templateParser.hh
src/antlr4/templateParser/grammarSTL/: CMakeLists.txt  genParser.sh  stl.g4  stl.interp  stl.tokens  stlBaseListener.java  stlLexer.interp  stlLexer.java  stlLexer.tokens  stlListener.java  stlParser.java
src/antlr4/templateParser/grammarSTL/.antlr/: stlLexer.java  stlLexer.tokens
src/antlr4/templateParser/grammarSTL/include/: stlBaseListener.h  stlLexer.h  stlListener.h  stlParser.h
src/antlr4/templateParser/grammarSTL/src/: stlBaseListener.cpp  stlLexer.cpp  stlListener.cpp  stlParser.cpp
src/antlr4/templateParser/grammarSpot/.antlr/: spotLexer.java  spotLexer.tokens
src/antlr4/templateParser/handler/: CMakeLists.txt
src/antlr4/templateParser/handler/include/: StlParserHandler.hh  templateParsingUtils.hh
src/antlr4/templateParser/handler/src/: StlParserHandler.cc  templateParsingUtils.cc
src/clustering/include/: Kmeans.hh  Kmeans.i.hh  utils.hh
src/commandLineParser/src/: commandLineParser.cc
src/exp/: CMakeLists.txt
src/exp/include/classes/: classes.hh
src/exp/include/classes/atom/: Atom.hh  CachedAllNumeric.hh  Constant.hh  Variable.hh
src/exp/include/classes/expression/: Derivative.hh  Derivative.i.hh  Expression.hh
src/exp/include/classes/temporal/: Eventually.hh  Globally.hh  Implication.hh  Placeholder.hh  TemporalAnd.hh  TemporalExp.hh  TemporalInst.hh  TemporalNot.hh  TemporalOr.hh  temporal.hh
src/exp/include/expUtils/: expUtils.hh
src/exp/include/visitors/: ColoredPrinterVisitor.hh  CopyVisitor.hh  CounterVisitor.hh  ExpVisitor.hh  PrinterVisitor.hh  VarExtractVisitor.hh
src/exp/src/classes/atom/: BooleanVariable.cc  CachedAllNumeric.cc  Constant.cc  LogicVariable.cc  NumericVariable.cc
src/exp/src/classes/expression/: BitSelector.cc  Derivative.cc  Expression.cc
src/exp/src/classes/temporal/: Eventually.cc  Globally.cc  Implication.cc  Placeholder.cc  TemporalAnd.cc  TemporalInst.cc  TemporalNot.cc  TemporalOr.cc
src/exp/src/expUtils/: expUtils.cc
src/exp/src/visitors/: ColoredPrinterVisitor.cc  CopyVisitor.cc  CounterVisitor.cc  ExpVisitor.cc  PrinterVisitor.cc  VarExtractVisitor.cc
src/globals/include/: globals.hh
src/globals/src/: globals.cc
src/googletest/docs/: advanced.md
src/googletest/googletest/test/: gtest-typed-test_test.cc
src/miner/interface/include/: Miner.hh
src/miner/interface/src/: Miner.cc
src/miner/modules/: CMakeLists.txt
src/miner/utils/: CMakeLists.txt
src/miner/utils/include/: Assertion.hh  Automaton.hh  ClsOp.hh  Context.hh  DTAndF.hh  DTAndG.hh  DTLimits.hh  DTOperator.hh  DTUtils.hh  DataType.hh  EdgeProposition.hh  Hstring.hh  Implication.hh  Location.hh  Metric.hh  PermGenerator.hh  R_types.hh  Rectifier.hh  StlEventually.hh  StlImplication.hh  StlInst.hh  StlPlaceholder.hh  Template.hh  TemporalAnd.hh  TemporalExp.hh  Trace.hh  harmIcon.hh  minerUtils.hh
src/miner/utils/src/: Assertion.cc  Automaton.cc  Context.cc  DTAnd.cc  DTAndF.cc  DTAndG.cc  DataType.cc  EdgeProposition.cc  Hstring.cc  Implication.cc  PermGenerator.cc  StlEventually.cc  StlImplication.cc  StlInst.cc  StlPlaceholder.cc  Template.cc  TemplateEval.cc  TemporalAnd.cc  Trace.cc  minerUtils.cc
tests/: CMakeLists.txt  evalTests.cc  traceTests.cc
tests/Engine_timing/: Engine_timing.csv  Engineconfig.xml  tree.dot
tests/Fuel_control/: Fuelconfig.xml  tree.dot  vac.txt
tests/HeaterCase/: HT_config.xml  HT_trace.csv  run.sh
tests/Matlab_benchmarks/ABS/: ABS_config.xml  ABS_trace.csv  ABS_trace.xlsx  behavior.txt
tests/Matlab_benchmarks/Engine_timing/: behavior.txt  run.sh
tests/Matlab_benchmarks/Fuel_control/: behavior.txt  run.sh
tests/Matlab_benchmarks/Gearbox/: Gearbox_trace.csv  Gearbox_trace.xlsx  Gearboxconfig.xml  run.sh
tests/WaterTanksCase/: Trace_final.csv  WT_Traces.csv  WT_Traces_30s.csv  WT_Traces_broken.csv  WT_config.xml  behaviours.txt  run.sh
tests/clustering/: eventually.xml  run.sh  t1.csv
tests/gearboxCase/: Gearbox_config.xml  gearbox_trace_new.csv  run.sh  trace_gearbox.txt  trace_gearbox_Date.csv  trace_gearbox_final.csv
tests/input/: EvalTest_t1.csv  WaterTanks.csv
tests/input/STL_EVENTUALLY/: stlEventually.xml
tests/input/nextAnd/: nextAnd_t1.xml  nextAnd_t2.xml  nextAnd_t3.xml  nextAnd_t5.xml
tests/runningExample/: eventually.xml  run.sh  t1.csv  t2.csv  t3.csv  t4.csv  t4_with_comments.csv
tests/stlsat_test/: simple_test.stl  wt_formulas.stl
tests/waterTanksCase/: TankEmptying_OpenValve_ass.txt  TankEmptying_OpenValve_rob.csv  Trace_final.csv  WT_Trace_Date.csv  WT_Traces_80s.csv  WT_config.xml  behaviours.txt  robtest_config.xml  run.sh  run_rob.sh  trace_0.5s.csv  trace_0.7s.csv  tree.dot
tests/waterTanksCase/faulty/: WT_trace_faulty.csv
(+30 files in other folders)
